# m2m-protocol

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  Makefile  README.md  VISION.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: CHANGELOG.md  IMPLEMENTATION_ROADMAP.md  PRD.md  PROXY.md  README.md  TECHNICAL_DESIGN.md  index.md
docs/examples/wire-format/: chat-completion.md
docs/guides/: proxy.md  quickstart.md
docs/reference/: abbreviations.md  configuration.md  error-codes.md
docs/spec/: 00-introduction.md  01-terminology.md  02-wire-format.md  03-message-types.md  04-compression.md  05-session-management.md  06-security.md
src/: error.rs  lib.rs
src/codec/: algorithm.rs  brotli.rs  dictionary.rs  engine.rs  m3.rs  mod.rs  streaming.rs  tables.rs  token.rs  token_native.rs
src/codec/m2m/: cost.rs  flags.rs  frame.rs  header.rs  mod.rs  varint.rs
src/codec/m2m/crypto/: aead.rs  error.rs  exchange.rs  hierarchy.rs  hmac_auth.rs  keyring.rs  mod.rs
src/config/: mod.rs
src/inference/: bitnet.rs  hydra.rs  mod.rs  tokenizer.rs
src/models/: card.rs  embedded.rs  mod.rs  registry.rs
src/protocol/: capabilities.rs  message.rs  mod.rs  session.rs
src/proxy/: mod.rs  server.rs  stats.rs
src/security/: mod.rs  patterns.rs  scanner.rs
src/server/: config.rs  handlers.rs  mod.rs  state.rs
src/tokenizer/: counter.rs  mod.rs
src/transport/: config.rs  mod.rs  quic.rs  tcp.rs
tests/: e2e_session.rs  e2e_transport.rs  integration_openrouter.rs  multi_agent_crypto.rs
website/: .gitignore  .prettierignore  astro.config.mjs  package-lock.json  package.json
website/public/: CNAME
website/src/content/docs/: CHANGELOG.md  index.md
website/src/content/docs/examples/wire-format/: chat-completion.md
website/src/content/docs/guides/: proxy.md  quickstart.md
website/src/content/docs/reference/: abbreviations.md  configuration.md  error-codes.md
website/src/content/docs/spec/: 00-introduction.md  01-terminology.md  02-wire-format.md  03-message-types.md  04-compression.md  05-session-management.md  06-security.md
website/src/styles/: custom.css
